Bugfix: animation fixes on smaller screens

--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -131,7 +131,6 @@ body{
     img{
         object-fit: cover;
         border-radius: 1rem;
-        opacity: .7;
         width: 100%;
         height: 100%
         
